<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Icono de regreso -->
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="Back"
            android:layout_gravity="start"
            android:layout_marginBottom="24dp"
            tools:ignore="HardcodedText" />

        <!-- Título -->
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registra_tus_datos_personales"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="24dp" />

        <!-- Campos de texto -->
        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:backgroundTint="#000000"
            android:hint="@string/nombres"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:backgroundTint="#000000"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />


        <EditText
            android:id="@+id/id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:backgroundTint="#000000"
            android:hint="@string/cedula_de_ciudadan_a"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:backgroundTint="#000000"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize"
            />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#000000"
            android:hint="@string/tel_fono"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#000000"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="Autofill" />

        <!-- Botón de siguiente -->
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_arrow_forward"
            android:background="@android:color/transparent"
            android:layout_gravity="end"
            android:contentDescription="@string/next" />

    </LinearLayout>
</ScrollView>
