<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- Título -->

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalles_de_mi_cuenta"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Card: Información General -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardInformacionGeneral"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvNombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_usuario"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvCedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_dula_de_ciudadan_a"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tvPlaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_nu_placa"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tvCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_mero_de_cuenta"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>




    <LinearLayout
        android:id="@+id/layoutAcciones"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardInformacionGeneral"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnCopiar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copiar"
            android:backgroundTint="@color/purple_500"
            android:drawableLeft="@drawable/ic_copy"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnCompartir"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compartir"
            android:drawableLeft="@drawable/ic_share"
            android:backgroundTint="@color/material_dynamic_tertiary90"
            />

    </LinearLayout>

    <!-- Divider -->
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/layoutAcciones"/>

    <!-- Card: Detalles Adicionales -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardDetalles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/layoutAcciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="433dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/Detalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/detalles"
                android:textSize="26sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/DetallesImpuestos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/impuestos"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DetalleCuota"
                    android:layout_width="200dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:text="@string/cuenta_libre_del_4x1000"
                    android:textSize="14sp"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/DetalleEstado"
                    android:layout_width="26dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/todo"
                    android:text="@string/si"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    tools:ignore="TextSizeCheck" />

                <ImageView
                    android:id="@+id/CuentaDeAhorrosNu"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_help"
                    tools:ignore="ContentDescription"
                    android:clickable="true"
                    android:focusable="true"/>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/layoutAcciones" />

            <TextView
                android:id="@+id/Tarifas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tarifas"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="26dp">

                    <TextView
                        android:id="@+id/DetalleTarifa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:text="@string/cuota_de_manejo"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/CuotaValor"
                        android:layout_width="26dp"
                        android:layout_height="24dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/cuota_valor"
                        android:textAlignment="textEnd"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="26dp">

                    <TextView
                        android:id="@+id/TarifaTransferencia"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:text="@string/transferencia_a_otros_bancos"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/TransferenciaValor"
                        android:layout_width="26dp"
                        android:layout_height="24dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/transfer_valor"
                        android:textAlignment="textEnd"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="26dp">

                    <TextView
                        android:id="@+id/RetiroDetalle"
                        android:layout_width="285dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:text="@string/retiros_en_cajero"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/RetiroValor"
                        android:layout_width="80dp"
                        android:layout_height="24dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/valor_retiro"
                        android:textAlignment="textEnd"
                        android:textSize="14sp" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
